# ia-mudevops-act-2

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  schemas.py
backend/app/routers/: auth.py  books.py  reservations.py  users.py
backend/tests/: conftest.py  test_auth.py  test_auth_unit.py  test_books.py  test_reservations.py  test_schemas_unit.py  test_users.py
database/: init.sql
frontend/: AGENTS.md  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  router.tsx
frontend/src/components/: BookCard.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  index.tsx  login.tsx
frontend/src/routes/books/: $id.tsx  index.tsx  new.tsx
frontend/src/routes/dashboard/: admin.tsx  user.tsx
frontend/src/routes/reservations/: index.tsx
frontend/src/routes/users/: $id.tsx  index.tsx  new.tsx
frontend/src/test/: api.test.ts  book-create.test.tsx  book-edit.test.tsx  books.test.tsx  dashboard.test.tsx  login.test.tsx  navbar.test.tsx  reservations.test.tsx  useAuth.test.tsx  user-create.test.tsx  user-edit.test.tsx  users.test.tsx
frontend/src/test/e2e/: auth-guards.spec.ts  books-admin.spec.ts  books-user.spec.ts  login.spec.ts  (+2 more)
frontend/src/types/: index.ts
tasks/: 01-project-definition.md  01-test-setup.md  02-backend-tests.md  02-database-spec.md  03-backend-spec.md  03-frontend-tests.md  04-test-analysis.md
tasks/archive/: 04-frontend-spec.md
(+4 files in other folders)
